# gst-playground

./: .gitignore  Makefile  README.md
gst_0.10/: Makefile  set-env.sh
gst_latest/: .gitignore  Makefile  set-env.sh
gzdec_0.10/: Makefile.am  README  configure.ac
gzdec_0.10/plugins/: Makefile.am  gstgzdec.c  gstgzdec.h  gstgzdecplugin.c
gzdec_latest/: Makefile.am  configure.ac
gzdec_latest/plugins/: Makefile.am  gstgzdec.c  gstgzdec.h  gstgzdecplugin.c
